re PR target/16430 (ICE when returning non-C aggregates larger than 16 bytes)

PR target/16430
	* config/sparc/sparc.c (function_value): In 64-bit mode,
	return the aggregates larger than 16 bytes like unions.

From-SVN: r84289